asean-dev-challenge-21/force-app/main/default/objects/Schedule__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Hall</fullName>
            </value>
            <value>
                <fullName>South Hall</fullName>
            </value>
            <value>
                <fullName>East Hall</fullName>
            </value>
            <value>
                <fullName>West Hall</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>